--- a/index.html
+++ b/index.html
@@ -1,7 +1,39 @@
 <html>
   <head>
   <title> Icy-Cube </title>
+  <link rel="stylesheet" type="text/css" href="index.css">
+
   </head>
   <body>
+  <div id="navbar">
+  <div id="icy-cube"><h1> icy-cube </h1></div>
+  <div id="about"><h2> About </h2></div>
+  <div id="overview"><h2> Mission Overview </h2></div>
+  <div id="documentation"><h2> Documentation </h2></div>
+  <div id="signin"><h3> Sign In </h3></div>
+  </div>
+  <canvas id="map" width="800" height="399">
+  </canvas>
+  <script>
+  console.log("Hello World");
+  var canvas = document.getElementById("map");
+var context = canvas.getContext("2d"); // returns a CanvasRenderingContext2D
+var imageObj = new Image();
+
+imageObj.onload = function() {
+        context.drawImage(imageObj, 0, 0, 800, 399);
+	   //context.drawImage(imageObj,0,0);
+	   draworbit();
+      };
+imageObj.src = 'earth.jpg';
+context.fillStyle = '#009933';
+//var satelliteCoordinates;
+draworbit = function () {
+for(var i = 0; i < 800; i++)
+	context.fillRect(i,200 + 150*Math.sin((0.888)*Math.PI*i/180),2,2);
+}
+
+</script>
+  
   </body>
 </html>
