--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <title> Icy-Cube </title>
     <link rel="stylesheet" type="text/css" href="index.css">
+    <script type='text/javascript' src='gui.js'></script>
   </head>
   <body>
     <div id="navbar">
@@ -22,32 +23,5 @@
 
     <canvas id="map" width="800" height="399">
     </canvas>
-    <script>
-      console.log("Hello World");
-      var canvas = document.getElementById("map");
-      var context = canvas.getContext("2d"); // returns a CanvasRenderingContext2D
-      var imageObj = new Image();
-
-      imageObj.onload = function() {
-      context.drawImage(imageObj, 0, 0, 800, 399);
-      //context.drawImage(imageObj,0,0);
-      draworbit();
-      };
-      imageObj.src = 'earth.jpg';
-      context.fillStyle = '#009933';
-      //var satelliteCoordinates;
-      draworbit = function () {
-      for(var i = 0; i < 800; i++)
-                         context.fillRect(i,200 + 150*Math.sin((0.888)*Math.PI*i/180),2,2);
-                         }
-
-                         </script>
   </body>
-  <script>
-    function updateTime(){
-    document.getElementById("Date").innerHTML = new Date().toLocaleString();
-    }
-
-    setInterval(updateTime,1000);
-  </script>
 </html>
